--- a/config.toml
+++ b/config.toml
@@ -1,17 +1,17 @@
-baseURL = 'http://example.org/'
+baseURL = '/'
 languageCode = 'cz'
 theme = 'ictunion'
 
 [languages]
   [languages.cz]
+    languagedirection = 'ltr'
     weight = 2
     [languages.cz.params]
-      linkedin = 'https://linkedin.com/whoever'
       tag_line = 'Sektorové odbory pracujících v <br> IT a komunikacích.'
       join_cta = 'přidej se'
 
   [languages.en]
-    languagedirection = 'rtl'
+    languagedirection = 'ltr'
     weight = 1
 
 [params]
