basic page design (#10)

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseURL = '/'
-defaultContentLanguage = 'cs'
+baseURL = "/"
+defaultContentLanguage = "cs"
 defaultContentLanguageInSubdir = true
+title = "ICT"
 
 [languages]
   [languages.cs]
