--- a/config.toml
+++ b/config.toml
@@ -63,3 +63,6 @@ title = "ICT"
     legal = "Leagal"
     legalNote = "registered in ..."
     legalLink = "Leagal Record"
+
+[markup.goldmark.renderer]
+  unsafe = true # Allow HTML in md files
