--- a/.editorconfig
+++ b/.editorconfig
@@ -21,6 +21,6 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
-[*.{yaml,yml,toml}]
+[*.{yaml,yml,toml,json}]
 indent_style = space
 indent_size = 2
