--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Marek Fajkus",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
+    "@nuintun/qrcode": "^3.3.0",
     "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.0",
-    "leaflet": "^1.9.3"
-  },
-  "devDependencies": {
+    "@types/vanillajs-datepicker": "^1.2.1",
+    "leaflet": "^1.9.3",
+    "signature_pad": "^4.1.4",
+    "vanillajs-datepicker": "^1.3.1"
   }
 }
