Generate pdfs from statuses (#21)

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ hugo.linux
 
 # Nodejs dependecies
 node_modules
+/static/downloads/ictunion-statutes-cs.pdf
+/static/downloads/ictunion-statutes-en.pdf
