--- a/config.toml
+++ b/config.toml
@@ -66,6 +66,7 @@ title = "ICT"
 
 [markup.goldmark.renderer]
   unsafe = true # Allow HTML in md files
-  
+
 [permalinks]
   events = '/:year/:slug/'
+  registered = '/:slug'
