--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
-[*.ts]
+[*.{ts,js}]
 indent_style = space
 indent_size = 4
 
@@ -28,6 +28,10 @@ indent_size = 2
 [*.md]
 indent_style = space
 indent_size = 4
+
+[*.{tex,sty}]
+indent_style = space
+indent_size = 2
 
 [Dockerfile]
 indent_style = space
