--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ hugo.linux
 node_modules
 /static/downloads/ictunion-statutes-cs.pdf
 /static/downloads/ictunion-statutes-en.pdf
+
+# Typescript output
+proxy/*.js
