--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ictunion",
   "version": "1.0.0",
   "description": "",
-  "main": "main.ts",
+  "main": "proxy/index.js",
   "scripts": {
+    "start": "npm run build && node proxy/index.js",
+    "build": "npx tsc proxy/index.ts --strict",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marek Fajkus",
@@ -16,5 +18,11 @@
     "leaflet": "^1.9.3",
     "signature_pad": "^4.1.4",
     "vanillajs-datepicker": "^1.3.1"
+  },
+  "devDependencies": {
+    "@types/http-proxy": "^1.17.10",
+    "@types/node": "^18.14.6",
+    "http-proxy": "^1.18.1",
+    "typescript": "^4.9.5"
   }
 }
