Localize name of download PDFs (#83)
Change all PDF related logic so we have czech naming on czech version
and english naming on english one.

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,7 @@ hugo.linux
 
 # Nodejs dependecies
 node_modules
-/static/downloads/ictunion-statutes-cs.pdf
-/static/downloads/ictunion-statutes-en.pdf
+/static/downloads/*.pdf
 
 # Typescript output
 proxy/*.js
