--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,5 +24,11 @@ jobs:
       - name: Install nix
         uses: cachix/install-nix-action@v18
 
+      - name: Typecheck with tsc
+        run: nix develop -c bash -c 'cd assets; npx tsc'
+
+      - name: Copile PDF with pandoc and xelatex
+        run: nix develop -c bash -c './latex/print-all'
+
       - name: Build evenrything
         run: nix build
