Devcontainer/Codesapces: add VS code extension for editorconfig & hugo (#106)
Turned out this is supper easy to do from Codespaces. There is just
option in vs code to add the extension to recommended in devcontainer.

related to
https://github.com/ictunion/main-website/pull/105#issuecomment-1465163553

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,13 @@
   "build": { "dockerfile": "../Dockerfile" },
   "forwardPorts": [ 1313 ],
   "onCreateCommand": "npm install",
-  "features": {
+  "features": {},
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "EditorConfig.EditorConfig",
+        "budparr.language-hugo-vscode"
+      ]
+    }
   }
 }
