--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Typecheck with tsc
         run: nix develop -c bash -c 'cd assets; npx tsc'
 
+      - name: Run tests
+        run: nix develop -c bash -c 'npm test'
+
       - name: Copile PDF with pandoc and xelatex
         run: nix develop -c bash -c './latex/print-all'
 
