--- a/package.json
+++ b/package.json
@@ -6,23 +6,27 @@
   "scripts": {
     "start": "npm run build && node proxy/index.js",
     "build": "npx tsc proxy/index.ts --strict",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --config assets/jest.config.js"
   },
   "author": "Marek Fajkus",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@nuintun/qrcode": "^3.3.0",
-    "@types/geojson": "^7946.0.10",
-    "@types/leaflet": "^1.9.0",
-    "@types/vanillajs-datepicker": "^1.2.1",
     "leaflet": "^1.9.3",
     "signature_pad": "^4.1.4",
     "vanillajs-datepicker": "^1.3.1"
   },
   "devDependencies": {
-    "@types/http-proxy": "^1.17.10",
+    "@types/geojson": "^7946.0.10",
+    "@types/leaflet": "^1.9.0",
+    "@types/vanillajs-datepicker": "^1.2.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
+    "@types/http-proxy": "^1.17.10",
     "http-proxy": "^1.18.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
