--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,10 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   joinCta = 'join us'
   support_email = 'tba'
   support_phone = 'tba'
+  [params.legal]
+    entityName = 'Odborová organizace pracujících v ICT'
+    entry = 'https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=1130032&typ=UPLNY'
+    registrationNumber = '116 57 502'
   [params.social]
     github = 'https://github.com/ictunion'
     twitter = ''
@@ -38,8 +42,8 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     socials = "Socials"
     languages = "Languages"
     legal = "Legal"
-    legalNote = "registered in ..."
-    legalLink = "Legal Record"
+    legalLink = "ID"
+    partners = "Parners"
 
 [languages]
   [languages.cs]
@@ -67,8 +71,8 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         socials = "Sítě"
         languages = "Jazyky"
         legal = "Právní info"
-        legalNote = "registered in ..."
-        legalLink = "Registrační záznam"
+        legalLink = "IČO"
+        partners = "Patneři"
 
   [languages.en]
     languagedirection = 'ltr'
@@ -93,3 +97,11 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
 [outputs]
   home = ['HTML'] # default is ['HTML','RSS'] - disable RSS for homepage
   page = ['HTML']
+
+# Define list of partners
+[[params.partners]]
+  name = "OSPPP"
+  link = "https://www.osppp.cz/"
+[[params.partners]]
+  name = "UNI Global Union"
+  link = "https://uniglobalunion.org/"
