Add contacts section to footer (#132)
Add contact section to site footer.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -44,6 +44,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     legal = "Legal"
     legalLink = "ID"
     partners = "Parners"
+    contacts = "Contacts"
 
 [languages]
   [languages.cs]
@@ -67,12 +68,13 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         membershipTitle = "Členství ti přinese..."
         eventsTitle = "Plánované události:"
       [languages.cs.params.footer]
-        learnMore = "Poznat více"
+        learnMore = "Poznej více"
         socials = "Sítě"
         languages = "Jazyky"
         legal = "Právní info"
         legalLink = "IČO"
         partners = "Patneři"
+        contacts = "Kontakty"
 
   [languages.en]
     languagedirection = 'ltr'
