improve styling on homepage (#128)
Various improvements to styling of homepage content

- nicer styling in boxes
- more mobile friendly style in single column layout

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     weight = 1
     [languages.cs.params]
       lang = 'cs'
-      tagLine = 'Odborová organizace pracujících v <br> IT a komunikacích.'
+      tagLine = 'Odborová organizace pracujících v IT a komunikacích.'
       joinCta = 'přidej se'
       [languages.cs.params.navigation]
         home = "Domů"
