Kubik161 added to contributors (#139)
Adding myself to public contributor list


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]

--- a/public-contributors.toml
+++ b/public-contributors.toml
@@ -1,3 +1,10 @@
 [turboMaCk]
 name = "Marek Fajkus"
 email = "marek.faj@gmail.com"
+[Kubik161]
+name = "Kubik161"
+email = "30665071+Kubik161@users.noreply.github.com"
+[kubik]
+name = "kubik"
+email = "jakub.juroska161@gmail.com"
+
