Improve text english variant of home page (#140)
Improve texts in english variant of a homepage

- No change in meaning, just improved formulations of the same ideas
- Shorten headlines like it was done for cs version
- All additional content is translation of additions to cs version

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     faq = "FAQ"
   [params.home]
     participateTitle = "How to participate?"
-    membershipTitle = "Membership means..."
+    membershipTitle = "We provide..."
     eventsTitle = "Upcoming Events:"
   [params.footer]
     learnMore = "Learn More"
