Edit faq 5, correct typos in cs and en (#142)
I just run through the texts and did some corrections. Since my czech is
stronger than english, it would be wise if someone could check the en
one last time.

I also edited FAQ number 5 - erased the first sentence and made whole
sentences out of the bullet points.

Let me know what you think.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/data/occupations.yaml
+++ b/data/occupations.yaml
@@ -1,4 +1,4 @@
-- en: progammers
+- en: programmers
   cs: programátorky
 - en: testers
   cs: testeři
@@ -18,7 +18,7 @@
   cs: webové vývojářky
 - en: system analysts
   cs: systémoví analytici
-- en: IT consulatnts
+- en: IT consultants
   cs: IT konzultantky
 - en: software analysts
   cs: softwaroví analytici
