Intercorporate feedback from google doc (#141)
Changes based on google docs feedback:

- translate site subtitle to czech
- add link to FAQ on occupations from homepage
- add phone numbers to home and FAQ
- add occupations list to about
- add contacts to about
- update UNI link to link to ICT related section


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]

--- a/config.toml
+++ b/config.toml
@@ -54,6 +54,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     languagedirection = 'ltr'
     weight = 1
     [languages.cs.params]
+      subTitle = 'Odbory'
       lang = 'cs'
       tagLine = 'Odborová organizace pracujících v IT a komunikacích.'
       joinCta = 'přidej se'
@@ -107,4 +108,4 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   link = "https://www.osppp.cz/"
 [[params.partners]]
   name = "UNI Global Union"
-  link = "https://uniglobalunion.org/"
+  link = "https://www.uni-europa.org/sectors/ict-related-services/"
