WIP #138 - adding wojciech29 to public contributors (#145)
Adding myself to public contributor list

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/public-contributors.toml
+++ b/public-contributors.toml
@@ -7,4 +7,9 @@ email = "30665071+Kubik161@users.noreply.github.com"
 [kubik]
 name = "kubik"
 email = "jakub.juroska161@gmail.com"
-
+[wojciech29]
+name = "wojciech29"
+email = "wojciech29@users.noreply.github.com"
+[wojciech29_2]
+name = "wojciech29"
+email = "vojtech.remes@gmail.com"
