update public-contributors.toml (#151)
related to https://github.com/ictunion/git-anonymize/pull/2

This uses new ability to list multiple names and emails in
public-contributors.toml


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/public-contributors.toml
+++ b/public-contributors.toml
@@ -1,15 +1,11 @@
 [turboMaCk]
 name = "Marek Fajkus"
 email = "marek.faj@gmail.com"
+
 [Kubik161]
-name = "Kubik161"
-email = "30665071+Kubik161@users.noreply.github.com"
-[kubik]
-name = "kubik"
-email = "jakub.juroska161@gmail.com"
+name = [ "Kubik161", "kubik" ]
+email =  [ "30665071+Kubik161@users.noreply.github.com", "jakub.juroska161@gmail.com" ]
+
 [wojciech29]
 name = "wojciech29"
-email = "wojciech29@users.noreply.github.com"
-[wojciech29_2]
-name = "wojciech29"
-email = "vojtech.remes@gmail.com"
+email = [ "wojciech29@users.noreply.github.com", "vojtech.remes@gmail.com" ]
