--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,9 +5,7 @@
 # That is of course unless you're OK with being publically associated with the project
 # and therefore the union.
 #
-# This particular file is excluded from public tar ball though
-# but we can't gurantee anyone would not produce tar.gz in some different way in the future
-# which would include this file.
+# This particular file is excluded from public tar ball but is visible in public mirror of the repository!
 
 # Content
 /content/            @Kubik161
