Refactor snake case to camle case (#152)
I made a mistake of using snake_case on some places. Go (Hugo) is using
camelCase so we should use it as well for sake of consistency of param
names.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -13,8 +13,8 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   subTitle = 'Union'
   tagLine = 'Trade union of workers in <br> IT & communications.'
   joinCta = 'join us'
-  support_email = 'ictodbory@gmail.com'
-  support_phone = '+420 737 035 289'
+  supportEmail = 'ictodbory@gmail.com'
+  supportPhone = '+420 737 035 289'
   [params.legal]
     entityName = 'Odborová organizace pracujících v ICT'
     entry = 'https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=1130032&typ=UPLNY'
