Update english texts (#170)
- Translate latest changes in czech variant to english.
- fix grammer mistakes in english translations
- minor improvements and unifications in czech variant


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     languages = "Languages"
     legal = "Legal"
     legalLink = "ID"
-    partners = "Parners"
+    partners = "Partners"
     contacts = "Contacts"
 
 [languages]
@@ -75,7 +75,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         languages = "Jazyky"
         legal = "Právní info"
         legalLink = "IČO"
-        partners = "Patneři"
+        partners = "Partneři"
         contacts = "Kontakty"
 
   [languages.en]
