--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ title = "ICT"
 copyright = 'This work is licensed under a Creative Commons Attribution 4.0 International License.'
 
 [author]
-  email = 'TBA'
+  email = 'ictodbory@gmail.com'
   name = 'Odborová organizace pracujících v ICT'
 
 [params]
@@ -34,6 +34,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     register = "Application"
     events = "Events"
     faq = "FAQ"
+    statements = "Statements"
   [params.home]
     participateTitle = "How to participate?"
     membershipTitle = "We provide..."
@@ -65,6 +66,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         register = "Přihláška"
         events = "Události"
         faq = "Časté dotazy"
+        statements = "Výroky"
       [languages.cs.params.home]
         participateTitle = "Jak se zapojit?"
         membershipTitle = "Členství ti přinese..."
