improve permalinks mapping (#175)
Improve permalinks configuration to make URLs localized.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -92,8 +92,13 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   unsafe = true # Allow HTML in md files
 
 [permalinks]
-  events = '/:year/:slug/'
+  events = '/events/:year/:slug/'
   registered = '/:slug'
+  statements = '/statements/:slug'
+
+[languages.cs.permalinks]
+  events = '/udalosti/:year/:slug/'
+  statements = '/prohlaseni/:slug'
 
 [sitemap]
   changefreq = 'monthly'
