--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,8 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   joinCta = 'join us'
   supportEmail = 'ictodbory@gmail.com'
   supportPhone = '+420 737 035 289'
+  publicUrl = 'https://ictunion.cz'
+  sourceUrl = 'https://github.com/ictunion/main-website-public'
   [params.legal]
     entityName = 'Odborová organizace pracujících v ICT'
     entry = 'https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=1130032&typ=UPLNY'
@@ -66,7 +68,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         register = "Přihláška"
         events = "Události"
         faq = "Časté dotazy"
-        statements = "Výroky"
+        statements = "Prohlášení"
       [languages.cs.params.home]
         participateTitle = "Jak se zapojit?"
         membershipTitle = "Členství ti přinese..."
