--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,6 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   supportEmail = 'ictodbory@gmail.com'
   supportPhone = '+420 737 035 289'
   publicUrl = 'https://ictunion.cz'
-  sourceUrl = 'https://github.com/ictunion/main-website-public'
   [params.legal]
     entityName = 'Odborová organizace pracujících v ICT'
     entry = 'https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=1130032&typ=UPLNY'
@@ -49,6 +48,10 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
     legalLink = "ID"
     partners = "Partners"
     contacts = "Contacts"
+    licensingNote = '''
+    Content is provided under <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.<br>
+    Source code is <a target="_blank" href="https://github.com/ictunion/main-website-public">released</a> under <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL</a> license.
+    '''
 
 [languages]
   [languages.cs]
@@ -81,6 +84,10 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
         legalLink = "IČO"
         partners = "Partneři"
         contacts = "Kontakty"
+        licensingNote = '''
+        Obsah poskytujeme pod licencí <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/deed.cs">Creative Commons Attribution 4.0 International</a>.<br>
+        Zdrojový kód <a target="_blank" href="https://github.com/ictunion/main-website-public">je vydán</a> pod licencí <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL</a>.
+        '''
 
   [languages.en]
     languagedirection = 'ltr'
