Change author and improve statute PDFs (#193)
Improve how are statutes generated and change authors in _package.json_


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc proxy/index.ts --strict",
     "test": "npx jest --config assets/jest.config.js"
   },
-  "author": "Marek Fajkus",
+  "author": "members of ICT Union",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@nuintun/qrcode": "^3.3.0",
