fix language name rendering (#199)
There seems to be weird issue with hugo shadowing or ignoring the
`languageName` attribute. This leads to language name no longer
displaying on web. This fixes the problem.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -55,7 +55,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
 
 [languages]
   [languages.cs]
-    languageName = "Česky"
+    language = 'Česky'
     languageFlag = "🇨🇿"
     languagedirection = 'ltr'
     weight = 1
@@ -91,7 +91,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
 
   [languages.en]
     languagedirection = 'ltr'
-    languageName = "English"
+    language = 'English'
     languageFlag = "🇬🇧"
     weight = 2
     [languages.en.params]
