Switch support email to union owned domain (#184)
changes support email from `ictodbory@gmail.com` to
`support@ictunion.cz`

**There is no rush to merge this change**. In fact it might be more
strategic to wait with merge and first gather some experience with our
own mailserver and switch only once we feel quite confortable.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   subTitle = 'Union'
   tagLine = 'Trade union of workers in <br> IT & communications.'
   joinCta = 'join us'
-  supportEmail = 'ictodbory@gmail.com'
+  supportEmail = 'support@ictunion.cz'
   supportPhone = '+420 737 035 289'
   publicUrl = 'https://ictunion.cz'
   [params.legal]
