Optimize CI build (#227)
Last build on main branch for public version took `3m 25s`.
After this chage, the cached build takes `2m 56s`.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,8 +20,9 @@ jobs:
           tar xzf ec-$OS-$ARCH.tar.gz
           ./bin/ec-$OS-$ARCH
 
-      - name: Install nix
-        uses: cachix/install-nix-action@v18
+      # Nix
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Typecheck with tsc
         run: nix develop -c bash -c 'cd assets; npx tsc'
