--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,5 +33,8 @@ jobs:
       - name: Copile PDF with pandoc and xelatex
         run: nix develop -c bash -c './latex/print-all'
 
-      - name: Build evenrything
+      - name: Build everything
         run: nix build
+
+      - name: Run re-build script
+        run: nix run . -- --buildDrafts --verbose
