added MS workplace info page (#273)
New workplace union has been founded in Microsoft corp, therefore new
page has been created in `content/workplaces`.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/public-contributors.toml
+++ b/public-contributors.toml
@@ -9,3 +9,7 @@ email =  [ "30665071+Kubik161@users.noreply.github.com", "jakub.juroska161@gmail
 [wojciech29]
 name = "wojciech29"
 email = [ "wojciech29@users.noreply.github.com", "vojtech.remes@gmail.com" ]
+
+[radim91]
+name = "radim91"
+email = "dev@radimhejduk.cz"
