Improve alternate text for logos (#276)
Applying change from one of the members.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

[anonymized]
[anonymized]

--- a/config.toml
+++ b/config.toml
@@ -10,8 +10,9 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
 [params]
   title = 'ICT'
   subTitle = 'Union'
-  tagLine = 'Trade union of workers in <br> IT & communications.'
+  tagLine = 'Trade union of workers in IT & communications.'
   joinCta = 'join us'
+  eventPosterAlt = 'Poster for the event'
   supportEmail = 'support@ictunion.cz'
   supportPhone = '+420 737 035 289'
   publicUrl = 'https://ictunion.cz'
@@ -64,6 +65,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
       lang = 'cs'
       tagLine = 'Odborová organizace pracujících v IT a komunikacích.'
       joinCta = 'přidej se'
+      eventPosterAlt = 'Plakát k akci'
       [languages.cs.params.navigation]
         home = "Domů"
         aboutUs = "O nás"
