Fix #285: Workplace organizing CTA (#290)
Fixes #285: Workplace organizing call to action. Only english version
for now, after it is approved I will add Czech version.


![image](https://github.com/user-attachments/assets/08ee26a5-911c-4293-bd99-1c79d4402f9b)


![image](https://github.com/user-attachments/assets/0ced1f28-1394-4585-8100-5bff5baf177e)

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,8 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   title = 'ICT'
   subTitle = 'Union'
   tagLine = 'Trade union of workers in IT & communications.'
-  joinCta = 'join us'
+  joinCta = 'become a member'
+  createWorkplace = 'create a workplace union'
   eventPosterAlt = 'Poster for the event'
   supportEmail = 'support@ictunion.cz'
   supportPhone = '+420 737 035 289'
@@ -65,7 +66,8 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
       language = 'Česky'
       languageFlag = "🇨🇿"
       tagLine = 'Odborová organizace pracujících v IT a komunikacích.'
-      joinCta = 'přidej se'
+      joinCta = 'staň se členem*kou'
+      createWorkplace = 'založ odbory na pracovišti'
       eventPosterAlt = 'Plakát k akci'
       [languages.cs.params.navigation]
         home = "Domů"
