better upcoming title and both dates for events (#294)
Better way to display ongoing events


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]

--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
   [params.home]
     participateTitle = "How to participate?"
     membershipTitle = "We provide..."
-    eventsTitle = "Upcoming Events:"
+    eventsTitle = "Upcoming and ongoing events:"
   [params.footer]
     learnMore = "Learn More"
     socials = "Socials"
@@ -82,7 +82,7 @@ copyright = 'This work is licensed under a Creative Commons Attribution 4.0 Inte
       [languages.cs.params.home]
         participateTitle = "Jak se zapojit?"
         membershipTitle = "Členství ti přinese..."
-        eventsTitle = "Plánované akce:"
+        eventsTitle = "Plánované a probíhající akce:"
       [languages.cs.params.footer]
         learnMore = "Poznej více"
         socials = "Sítě"
