--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ hugo.linux
 
 # Ignore nix result symlinks
 /result*
+# To make sure everyone can configure this to their personal liking
+.envrc
+.direnv
 
 # Nodejs dependecies
 node_modules
